fixed heading alignment

--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ h1 {
         right: 200px;
         left: 200px;
         padding-bottom: 40px;
-        padding-top: 40px;
+        
         
     }
 
@@ -235,9 +235,10 @@ h1 {
     
     h1 {
         margin: auto;
-        text-align: center;
+        align-self:flex-start;
         padding-top: 50px;
         padding-bottom: 50px;
+        padding-right: 200px;
     }
     
     
